INSTALL(FILES
	OpenCogAtomTypes.cmake
	OpenCogCython.cmake
	OpenCogGenCxxTypes.cmake
	OpenCogGenOCamlTypes.cmake
	OpenCogGenPythonTypes.cmake
	OpenCogGenScmTypes.cmake
	OpenCogGenTypes.cmake
	OpenCogGenWrapper.cmake
	OpenCogGuile.cmake
	OpenCogOCaml.cmake
	OpenCogMacros.cmake
	OpenCogFunctions.cmake
	cython-wrapper.sh
	DESTINATION
	${DATADIR}/cmake/)
