ADD_SUBDIRECTORY (atom_types)
ADD_SUBDIRECTORY (value)
ADD_SUBDIRECTORY (base)
ADD_SUBDIRECTORY (core)
ADD_SUBDIRECTORY (execution)
ADD_SUBDIRECTORY (flow)
ADD_SUBDIRECTORY (foreign)
ADD_SUBDIRECTORY (grounded)
ADD_SUBDIRECTORY (join)
ADD_SUBDIRECTORY (parallel)
ADD_SUBDIRECTORY (pattern)
ADD_SUBDIRECTORY (reduct)
ADD_SUBDIRECTORY (truthvalue)
