name:                opencog-atomspace
version:             0.1.0.0
synopsis:            -
homepage:            github.com/opencog/atomspace/tree/master/opencog/haskell
license:             OtherLicense
author:              Marcos Pividori
maintainer:          -
category:            Artificial Intelligence
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   OpenCog.AtomSpace

  other-modules:     OpenCog.AtomSpace.Env
                   , OpenCog.AtomSpace.Internal
                   , OpenCog.AtomSpace.Utils
                   , OpenCog.AtomSpace.Api
                   , OpenCog.AtomSpace.Types
                   , OpenCog.AtomSpace.Inheritance
                   , OpenCog.AtomSpace.Filter
                   , OpenCog.AtomSpace.AtomType
                   , OpenCog.AtomSpace.Template

  build-depends:     base         >=4.5
                   , transformers >=0.3
                   , template-haskell

  extra-libraries:   haskell-atomspace
  ghc-options:       -fcontext-stack=500
