name:                opencog-atomspace
version:             0.1.0.0
synopsis:            Haskell Bindings for the AtomSpace.
description:         This library defines Haskell Bindings for the AtomSpace.
                     .
                     For more information on Haskell Bindings:
                     <http://wiki.opencog.org/w/Haskell>
                     .
                     GitHub repository:
                     <https://github.com/opencog/atomspace/tree/master/opencog/haskell>
homepage:            github.com/opencog/atomspace/tree/master/opencog/haskell
license:             OtherLicense
author:              Marcos Pividori
maintainer:          -
category:            Artificial Intelligence
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   OpenCog.AtomSpace

  other-modules:     OpenCog.AtomSpace.Api
                   , OpenCog.AtomSpace.AtomType
                   , OpenCog.AtomSpace.Env
                   , OpenCog.AtomSpace.Filter
                   , OpenCog.AtomSpace.Inheritance
                   , OpenCog.AtomSpace.Internal
                   , OpenCog.AtomSpace.Sugar
                   , OpenCog.AtomSpace.Template
                   , OpenCog.AtomSpace.Types
                   , OpenCog.AtomSpace.Query
                   , OpenCog.AtomSpace.Utils
                   , OpenCog.AtomSpace.CUtils

  build-depends:     base             >=4.5
                   , transformers     >=0.3
                   , template-haskell >=2.9.0.0
                   , containers       >=0.5.5.1
                   , mtl              >=2.1.3.1
                   , directory        >=1.2.1.0
                   , filepath         >=1.3.0.2

  extra-libraries:   atomspace-cwrapper
  ghc-options:       -fcontext-stack=500 -ddump-splices
