name:                opencog-atomspace
version:             0.1.0.8
synopsis:            Haskell Bindings for the AtomSpace.
description:         This library defines Haskell Bindings for the AtomSpace.
                     .
                     For more information on Haskell Bindings:
                     <http://wiki.opencog.org/w/Haskell>
                     .
                     GitHub repository:
                     <https://github.com/opencog/atomspace/tree/master/opencog/haskell>
homepage:            github.com/opencog/atomspace/tree/master/opencog/haskell
license:             OtherLicense
author:              Marcos Pividori
maintainer:          -
category:            Artificial Intelligence
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   OpenCog.AtomSpace

  other-modules:     OpenCog.AtomSpace.Api
                   , OpenCog.AtomSpace.Env
                   , OpenCog.AtomSpace.Internal
                   , OpenCog.AtomSpace.Sugar
                   , OpenCog.AtomSpace.Types
                   , OpenCog.AtomSpace.Query
                   , OpenCog.AtomSpace.Utils
                   , OpenCog.AtomSpace.CUtils

  build-depends:     base             >=4.5 && < 5
                   , transformers     >=0.3
