ADD_SUBDIRECTORY (storage)
ADD_SUBDIRECTORY (api)
ADD_SUBDIRECTORY (csv)
ADD_SUBDIRECTORY (file)
ADD_SUBDIRECTORY (flow)
ADD_SUBDIRECTORY (json)
ADD_SUBDIRECTORY (metta)
ADD_SUBDIRECTORY (prolog)
ADD_SUBDIRECTORY (proxy)
ADD_SUBDIRECTORY (sexcom)
ADD_SUBDIRECTORY (sexpr)
ADD_SUBDIRECTORY (sql)
ADD_SUBDIRECTORY (tlb)
